попытка 6 а так